[project]
name = "telegram-quiz-bot"
version = "1.0.0"
description = "Production-ready Telegram Quiz Bot with automated quiz delivery, live statistics tracking, and comprehensive analytics"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psutil>=7.0.0",
    "python-telegram-bot[job-queue,webhooks]>=22.4",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | static
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["data/*", "static/*", ".venv/*", "venv/*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "data",
    "static",
    ".venv",
    "venv",
    "build",
    "dist",
]
max-complexity = 10
